--- a/src/app.pcss
+++ b/src/app.pcss
@@ -56,7 +56,7 @@
 		--card: 222.2 84% 4.9%;
 		--card-foreground: 210 40% 98%;
 
-		--border: 217.2 32.6% 17.5%;
+		--border: var(--sage-6);
 		--input: 217.2 32.6% 17.5%;
 
 		--primary: var(--jade-4);
