Copy Button on Code Block

--- a/src/lib/prism-shades-of-purple.css
+++ b/src/lib/prism-shades-of-purple.css
@@ -1,13 +1,18 @@
-/**
- * Shades of Purple Theme for Prism.js
- *
- * @author Ahmad Awais <https://twitter.com/MrAhmadAwais/>
- * @support Follow/tweet at https://twitter.com/MrAhmadAwais/
- */
+/*
+Name: Duotone Sea
+Author: by Simurai, adapted from DuoTone themes by Simurai for Atom (http://simurai.com/projects/2016/01/01/duotone-themes)
+
+Conversion: Bram de Haan (http://atelierbram.github.io/Base2Tone-prism/output/prism/prism-base2tone-sea-dark.css)
+Generated with Base16 Builder (https://github.com/base16-builder/base16-builder)
+*/
 
 code[class*='language-'],
 pre[class*='language-'] {
-	color: #9efeff;
+	font-family: Consolas, Menlo, Monaco, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
+		'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono',
+		'Nimbus Mono L', 'Courier New', Courier, monospace;
+	font-size: 17px;
+	line-height: 1.375;
 	direction: ltr;
 	text-align: left;
 	white-space: pre;
@@ -22,40 +27,35 @@ pre[class*='language-'] {
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
+	background: #1d262f;
+	color: #57718e;
+}
 
-	font-family: 'Instrument Sans', 'Fira Code', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono',
-		monospace;
-	font-weight: 400;
-	font-size: 17px;
-	line-height: 25px;
-	letter-spacing: 0.5px;
-	text-shadow: 0 1px #222245;
-	width: 100%;
+pre > code[class*='language-'] {
+	font-size: 1em;
 }
 
 pre[class*='language-']::-moz-selection,
 pre[class*='language-'] ::-moz-selection,
 code[class*='language-']::-moz-selection,
-code[class*='language-'] ::-moz-selection,
+code[class*='language-'] ::-moz-selection {
+	text-shadow: none;
+	background: #004a9e;
+}
+
 pre[class*='language-']::selection,
 pre[class*='language-'] ::selection,
 code[class*='language-']::selection,
 code[class*='language-'] ::selection {
-	color: inherit;
-	background: #a599e9;
+	text-shadow: none;
+	background: #004a9e;
 }
 
-/* Code blocks. */
+/* Code blocks */
 pre[class*='language-'] {
-	padding: 1.5em;
+	padding: 1em;
 	margin: 0.5em 0;
 	overflow: auto;
-	border-radius: 0.75rem;
-}
-
-:not(pre) > code[class*='language-'],
-pre[class*='language-'] {
-	background: #1e1e3f;
 }
 
 /* Inline code */
@@ -64,176 +64,115 @@ pre[class*='language-'] {
 	border-radius: 0.3em;
 }
 
-.token {
-	font-weight: 400;
-}
-
 .token.comment,
 .token.prolog,
+.token.doctype,
 .token.cdata {
-	color: #b362ff;
-}
-
-.token.delimiter,
-.token.keyword,
-.token.selector,
-.token.important,
-.token.atrule {
-	color: #ff9d00;
-}
-
-.token.operator,
-.token.attr-name {
-	color: rgb(255, 180, 84);
+	color: #4a5f78;
 }
 
 .token.punctuation {
-	color: #ffffff;
+	color: #4a5f78;
 }
 
-.token.boolean {
-	color: rgb(255, 98, 140);
+.token.namespace {
+	opacity: 0.7;
 }
 
 .token.tag,
-.token.tag .punctuation,
-.token.doctype,
-.token.builtin {
-	color: rgb(255, 157, 0);
-}
-
-.token.entity,
-.token.symbol {
-	color: #6897bb;
-}
-
+.token.operator,
 .token.number {
-	color: #ff628c;
+	color: #0aa370;
 }
 
 .token.property,
-.token.constant,
-.token.variable {
-	color: #ff628c;
-}
-
-.token.string,
-.token.char {
-	color: #a5ff90;
-}
-
-.token.attr-value,
-.token.attr-value .punctuation {
-	color: #a5c261;
-}
-
-.token.attr-value .punctuation:first-child {
-	color: #a9b7c6;
-}
-
-.token.url {
-	color: #287bde;
-	text-decoration: underline;
-}
-
 .token.function {
-	color: rgb(250, 208, 0);
+	color: #57718e;
 }
 
-.token.regex {
-	background: #364135;
+.token.tag-id,
+.token.selector,
+.token.atrule-id {
+	color: #ebf4ff;
 }
 
-.token.bold {
-	font-weight: bold;
+code.language-javascript,
+.token.attr-name {
+	color: #7eb6f6;
+}
+
+code.language-css,
+code.language-scss,
+.token.boolean,
+.token.string,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.language-scss .token.string,
+.style .token.string,
+.token.attr-value,
+.token.keyword,
+.token.control,
+.token.directive,
+.token.unit,
+.token.statement,
+.token.regex,
+.token.atrule {
+	color: #47ebb4;
+}
+
+.token.placeholder,
+.token.variable {
+	color: #47ebb4;
+}
+
+.token.deleted {
+	text-decoration: line-through;
+}
+
+.token.inserted {
+	border-bottom: 1px dotted #ebf4ff;
+	text-decoration: none;
 }
 
 .token.italic {
 	font-style: italic;
 }
 
-.token.inserted {
-	background: #00ff00;
+.token.important,
+.token.bold {
+	font-weight: bold;
 }
 
-.token.deleted {
-	background: #ff000d;
+.token.important {
+	color: #7eb6f6;
 }
 
-code.language-css .token.property,
-code.language-css .token.property + .token.punctuation {
-	color: #a9b7c6;
+.token.entity {
+	cursor: help;
 }
 
-code.language-css .token.id {
-	color: #ffc66d;
+pre > code.highlight {
+	outline: 0.4em solid #34659d;
+	outline-offset: 0.4em;
 }
 
-code.language-css .token.selector > .token.class,
-code.language-css .token.selector > .token.attribute,
-code.language-css .token.selector > .token.pseudo-class,
-code.language-css .token.selector > .token.pseudo-element {
-	color: #ffc66d;
+/* overrides color-values for the Line Numbers plugin
+ * http://prismjs.com/plugins/line-numbers/
+ */
+.line-numbers.line-numbers .line-numbers-rows {
+	border-right-color: #1f2932;
 }
 
-.token.class-name {
-	color: #fb94ff;
+.line-numbers .line-numbers-rows > span:before {
+	color: #2c3847;
 }
 
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-	background: none;
-}
-
+/* overrides color-values for the Line Highlight plugin
+* http://prismjs.com/plugins/line-highlight/
+*/
 .line-highlight.line-highlight {
-	margin-top: 36px;
-	background: linear-gradient(to right, rgba(179, 98, 255, 0.17), transparent);
-}
-
-.line-highlight.line-highlight:before,
-.line-highlight.line-highlight[data-end]:after {
-	content: '';
-}
-
-pre[class*='language-'].line-numbers {
-	position: relative;
-	padding-left: 3.8em;
-	counter-reset: linenumber;
-}
-
-pre[class*='language-'].line-numbers > code {
-	position: relative;
-	white-space: inherit;
-}
-
-.line-numbers .line-numbers-rows {
-	position: absolute;
-	pointer-events: none;
-	top: 0;
-	font-size: 100%;
-	left: -3.8em;
-	width: 3em; /* works for line-numbers below 1000 lines */
-	letter-spacing: -1px;
-	border-right: 1px solid #999;
-
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.line-numbers-rows > span {
-	display: block;
-	counter-increment: linenumber;
-}
-
-.line-numbers-rows > span:before {
-	content: counter(linenumber);
-	color: #999;
-	display: block;
-	padding-right: 0.8em;
-	text-align: right;
+	background: rgba(10, 163, 112, 0.2);
+	background: -webkit-linear-gradient(left, rgba(10, 163, 112, 0.2) 70%, rgba(10, 163, 112, 0));
+	background: linear-gradient(to right, rgba(10, 163, 112, 0.2) 70%, rgba(10, 163, 112, 0));
 }
