Worked on api key UI section

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -83,4 +83,8 @@
 		font-family: 'Instrument Sans Variable', sans-serif;
 		@apply bg-background text-foreground;
 	}
+
+	blockquote {
+		@apply !text-emerald-200;
+	}
 }
