--- a/src/lib/prism-shades-of-purple.css
+++ b/src/lib/prism-shades-of-purple.css
@@ -1,23 +1,22 @@
-/*
-Name: Duotone Sea
-Author: by Simurai, adapted from DuoTone themes by Simurai for Atom (http://simurai.com/projects/2016/01/01/duotone-themes)
-
-Conversion: Bram de Haan (http://atelierbram.github.io/Base2Tone-prism/output/prism/prism-base2tone-sea-dark.css)
-Generated with Base16 Builder (https://github.com/base16-builder/base16-builder)
-*/
+/**
+ * MIT License
+ * Copyright (c) 2018 Sarah Drasner
+ * Sarah Drasner's[@sdras] Night Owl
+ * Ported by Sara vieria [@SaraVieira]
+ * Added by Souvik Mandal [@SimpleIndian]
+ */
 
 code[class*='language-'],
 pre[class*='language-'] {
-	font-family: Consolas, Menlo, Monaco, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
-		'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono',
-		'Nimbus Mono L', 'Courier New', Courier, monospace;
-	font-size: 17px;
-	line-height: 1.375;
-	direction: ltr;
+	color: #d6deeb;
+	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
 	word-break: normal;
+	word-wrap: normal;
+	line-height: 1.5;
+	font-size: 0.95em;
 
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
@@ -27,12 +26,6 @@ pre[class*='language-'] {
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
-	background: #1d262f;
-	color: #57718e;
-}
-
-pre > code[class*='language-'] {
-	font-size: 1em;
 }
 
 pre[class*='language-']::-moz-selection,
@@ -40,7 +33,7 @@ pre[class*='language-'] ::-moz-selection,
 code[class*='language-']::-moz-selection,
 code[class*='language-'] ::-moz-selection {
 	text-shadow: none;
-	background: #004a9e;
+	background: rgba(29, 59, 83, 0.99);
 }
 
 pre[class*='language-']::selection,
@@ -48,7 +41,14 @@ pre[class*='language-'] ::selection,
 code[class*='language-']::selection,
 code[class*='language-'] ::selection {
 	text-shadow: none;
-	background: #004a9e;
+	background: rgba(29, 59, 83, 0.99);
+}
+
+@media print {
+	code[class*='language-'],
+	pre[class*='language-'] {
+		text-shadow: none;
+	}
 }
 
 /* Code blocks */
@@ -58,85 +58,94 @@ pre[class*='language-'] {
 	overflow: auto;
 }
 
-/* Inline code */
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
+	color: white;
+	background: #011627;
+}
+
 :not(pre) > code[class*='language-'] {
 	padding: 0.1em;
 	border-radius: 0.3em;
+	white-space: normal;
 }
 
 .token.comment,
 .token.prolog,
-.token.doctype,
 .token.cdata {
-	color: #4a5f78;
+	color: rgb(99, 119, 119);
+	font-style: italic;
 }
 
 .token.punctuation {
-	color: #4a5f78;
+	color: rgb(199, 146, 234);
 }
 
-.token.namespace {
-	opacity: 0.7;
+.namespace {
+	color: rgb(178, 204, 214);
+}
+
+.token.deleted {
+	color: rgba(239, 83, 80, 0.56);
+	font-style: italic;
+}
+
+.token.symbol,
+.token.property {
+	color: rgb(128, 203, 196);
 }
 
 .token.tag,
 .token.operator,
+.token.keyword {
+	color: rgb(127, 219, 202);
+}
+
+.token.boolean {
+	color: rgb(255, 88, 116);
+}
+
 .token.number {
-	color: #0aa370;
+	color: rgb(247, 140, 108);
 }
 
-.token.property,
-.token.function {
-	color: #57718e;
+.token.constant,
+.token.function,
+.token.builtin,
+.token.char {
+	color: rgb(130, 170, 255);
 }
 
-.token.tag-id,
 .token.selector,
-.token.atrule-id {
-	color: #ebf4ff;
-}
-
-code.language-javascript,
-.token.attr-name {
-	color: #7eb6f6;
-}
-
-code.language-css,
-code.language-scss,
-.token.boolean,
-.token.string,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.language-scss .token.string,
-.style .token.string,
-.token.attr-value,
-.token.keyword,
-.token.control,
-.token.directive,
-.token.unit,
-.token.statement,
-.token.regex,
-.token.atrule {
-	color: #47ebb4;
-}
-
-.token.placeholder,
-.token.variable {
-	color: #47ebb4;
-}
-
-.token.deleted {
-	text-decoration: line-through;
-}
-
-.token.inserted {
-	border-bottom: 1px dotted #ebf4ff;
-	text-decoration: none;
-}
-
-.token.italic {
+.token.doctype {
+	color: rgb(199, 146, 234);
 	font-style: italic;
+}
+
+.token.attr-name,
+.token.inserted {
+	color: rgb(173, 219, 103);
+	font-style: italic;
+}
+
+.token.string,
+.token.url,
+.token.entity,
+.language-css .token.string,
+.style .token.string {
+	color: rgb(173, 219, 103);
+}
+
+.token.class-name,
+.token.atrule,
+.token.attr-value {
+	color: rgb(255, 203, 139);
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+	color: rgb(214, 222, 235);
 }
 
 .token.important,
@@ -144,35 +153,6 @@ code.language-scss,
 	font-weight: bold;
 }
 
-.token.important {
-	color: #7eb6f6;
-}
-
-.token.entity {
-	cursor: help;
-}
-
-pre > code.highlight {
-	outline: 0.4em solid #34659d;
-	outline-offset: 0.4em;
-}
-
-/* overrides color-values for the Line Numbers plugin
- * http://prismjs.com/plugins/line-numbers/
- */
-.line-numbers.line-numbers .line-numbers-rows {
-	border-right-color: #1f2932;
-}
-
-.line-numbers .line-numbers-rows > span:before {
-	color: #2c3847;
-}
-
-/* overrides color-values for the Line Highlight plugin
-* http://prismjs.com/plugins/line-highlight/
-*/
-.line-highlight.line-highlight {
-	background: rgba(10, 163, 112, 0.2);
-	background: -webkit-linear-gradient(left, rgba(10, 163, 112, 0.2) 70%, rgba(10, 163, 112, 0));
-	background: linear-gradient(to right, rgba(10, 163, 112, 0.2) 70%, rgba(10, 163, 112, 0));
+.token.italic {
+	font-style: italic;
 }
